<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <TextView
            android:id="@+id/sv_number"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@drawable/box_ui"
            android:gravity="center_vertical|center"
            android:text="@string/rank"
            android:textColor="#000000" android:textSize="15sp" android:layout_margin="2dp"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" android:background="@drawable/box_ui" android:layout_margin="2dp">

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:padding="2dp">

                <TextView
                    android:id="@+id/sv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/user_name" android:textColor="#000000" android:layout_marginLeft="2dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:padding="2dp">

                <TextView
                    android:id="@+id/sv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/Score" android:textColor="#000000" android:layout_marginLeft="2dp"/>

                <TextView
                    android:id="@+id/sv_endt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/date" android:textColor="#000000" android:layout_marginRight="2dp" android:textSize="10sp"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>