<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="1" android:background="@drawable/bini_main_yellow_05">

	<LinearLayout
	    android:id="@+id/linearLayout7"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical" >

	    <LinearLayout
	        android:id="@+id/linearLayout6"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:minWidth="250dp"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/ScoreView_Title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/round_box"
	            android:gravity="center"
	            android:minWidth="250dp"
	            android:text="@string/Score"
	            android:textColor="#FF0000"
	            android:textSize="30sp" />

	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout9"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_weight="0.08"
	        android:orientation="vertical" >

	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:background="@drawable/round_flat"
	        android:gravity="center"
	        android:minWidth="200dp" >

	        <TextView
	            android:id="@+id/LB_score"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Score"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>

	        <TextView
	            android:id="@+id/TV_score"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="TextView"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:background="@drawable/round_flat"
	        android:gravity="center"
	        android:minWidth="200dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/LB_depth"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Depth"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>

	        <TextView
	            android:id="@+id/TV_depth"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="TextView"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:background="@drawable/round_flat"
	        android:gravity="center"
	        android:minWidth="200dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/LB_distance"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Distance"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>

	        <TextView
	            android:id="@+id/TV_distance"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="TextView"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:background="@drawable/round_flat"
	        android:gravity="center"
	        android:minWidth="200dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/LB_totalscore"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Total_Socre"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>

	        <TextView
	            android:id="@+id/TV_total_score"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="TextView"
	            android:textColor="#000000"
	            android:textSize="20sp" android:layout_margin="10dp"/>
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout8"
	        android:layout_width="fill_parent"
	        android:layout_height="20dp"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal" >

	        <Button
	            android:id="@+id/sv_restart"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            android:background="@drawable/round_ui"
	            android:padding="10dp"
	            android:text="@string/restart"
	            android:textSize="20sp" />

	        <Button
	            android:id="@+id/sv_exit"
	            android:layout_width="74dp"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            android:background="@drawable/round_ui"
	            android:padding="10dp"
	            android:text="@string/Exit"
	            android:textSize="20sp" />
	    </LinearLayout>
	</LinearLayout>

</LinearLayout>
