<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bini_main_yellow_05"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scrollbars="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_margin="10dp"
                android:background="@drawable/round_box_green"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingTop="30dp" >

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/user_name"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/pref_user_name"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:inputType="textPersonName"
                        android:scrollbars="none"
                        android:singleLine="true" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <CheckBox
                        android:id="@+id/pref_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_flat"
                        android:paddingLeft="80dp"
                        android:paddingRight="20dp"
                        android:text="@string/sound"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/pref_vib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="3.83"
                        android:background="@drawable/round_flat"
                        android:paddingLeft="80dp"
                        android:paddingRight="20dp"
                        android:text="@string/vibrate"
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="30dp"
            android:gravity="bottom|center" >

            <Button
                android:id="@+id/pref_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_ui"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/Exit"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>